--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body class="mx-auto">
-    <h1>Test</h1>
+    <h1 class=" bg-red-800">Test</h1>
 </body>
 </html>
