--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
 </head>
-<body class="mx-auto">
-    <h1 class=" bg-red-800">Test</h1>
+<body class="mx-auto ">
+<header class="bg-white shadow-md fixed w-full z-50">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex  space-x-200 h-16 items-center">
+      <div class="flex-shrink-0">
+        <a href="#">
+          <img class="h-8 w-auto" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_Bélo.svg" alt="Airbnb Logo">
+        </a>
+      </div>
+      <div class="flex items-center ml-30">
+        <a href="#" class="font-bold">Become a host</a>
+        <button class="p-2 rounded-full hover:bg-gray-100 transition">
+          <i class="fa-solid fa-globe"></i>
+        </button>
+        <div class="flex items-center  p-2 space-x-2 hover:shadow-md cursor-pointer">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
 </body>
 </html>
