all added flex boxes

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 <div>    
   <div class="p-6">
-    <p class="font-black text-2xl mb-6">Popular homes in Nairobi > </p>
+    <p class="font-black text-2xl mb-6">Available next month in Paris > </p>
 
     <div class="flex flex-row justify-between">
 
@@ -288,7 +288,7 @@
 
 <div>    
   <div class="p-6">
-    <p class="font-black text-2xl mb-6">Popular homes in Nairobi > </p>
+    <p class="font-black text-2xl mb-6">Stay in London > </p>
 
     <div class="flex flex-row justify-between">
 
@@ -372,7 +372,7 @@
 
 <div>    
   <div class="p-6">
-    <p class="font-black text-2xl mb-6">Popular homes in Nairobi > </p>
+    <p class="font-black text-2xl mb-6">Available next month in Al - Riyad > </p>
 
     <div class="flex flex-row justify-between">
 
@@ -456,7 +456,7 @@
 
 <div>    
   <div class="p-6">
-    <p class="font-black text-2xl mb-6">Popular homes in Nairobi > </p>
+    <p class="font-black text-2xl mb-6">Homes in Rome > </p>
 
     <div class="flex flex-row justify-between">
 
@@ -536,6 +536,369 @@
   </div>
 </div>
 
+
+
+
+
+
+
+
+<div>    
+  <div class="p-6">
+    <p class="font-black text-2xl mb-6">Available next month in Barcelona > </p>
+
+    <div class="flex flex-row justify-between">
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/026b2b13-e1d2-499d-ada4-795a6f148289.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Kilimani estate</p>
+          <p class="text-xs text-gray-500">$64 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f3788038-3260-4454-a87d-4910b575fa66.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Nairobi</p>
+          <p class="text-xs text-gray-500">$50 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/fcb30403-a3e1-4de2-82ad-54d44e9b3974.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Room in Nairobi</p>
+          <p class="text-xs text-gray-500">$120 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in nailobi</p>
+          <p class="text-xs text-gray-500">$70 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f2b758a1_original.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border   p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Family Home</p>
+          <p class="text-xs text-gray-500">$90 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_2.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Penthouse Suite</p>
+          <p class="text-xs text-gray-500">$150 for 2 nights</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+<div>    
+  <div class="p-6">
+    <p class="font-black text-2xl mb-6">Places to stay in Milan > </p>
+
+    <div class="flex flex-row justify-between">
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/026b2b13-e1d2-499d-ada4-795a6f148289.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Kilimani estate</p>
+          <p class="text-xs text-gray-500">$64 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f3788038-3260-4454-a87d-4910b575fa66.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Nairobi</p>
+          <p class="text-xs text-gray-500">$50 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/fcb30403-a3e1-4de2-82ad-54d44e9b3974.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Room in Nairobi</p>
+          <p class="text-xs text-gray-500">$120 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in nailobi</p>
+          <p class="text-xs text-gray-500">$70 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f2b758a1_original.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border   p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Family Home</p>
+          <p class="text-xs text-gray-500">$90 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_2.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Penthouse Suite</p>
+          <p class="text-xs text-gray-500">$150 for 2 nights</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<div>    
+  <div class="p-6">
+    <p class="font-black text-2xl mb-6">Check out homes in Madrid > </p>
+
+    <div class="flex flex-row justify-between">
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/026b2b13-e1d2-499d-ada4-795a6f148289.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Kilimani estate</p>
+          <p class="text-xs text-gray-500">$64 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f3788038-3260-4454-a87d-4910b575fa66.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Nairobi</p>
+          <p class="text-xs text-gray-500">$50 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/fcb30403-a3e1-4de2-82ad-54d44e9b3974.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Room in Nairobi</p>
+          <p class="text-xs text-gray-500">$120 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in nailobi</p>
+          <p class="text-xs text-gray-500">$70 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f2b758a1_original.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border   p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Family Home</p>
+          <p class="text-xs text-gray-500">$90 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_2.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Penthouse Suite</p>
+          <p class="text-xs text-gray-500">$150 for 2 nights</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<div>    
+  <div class="p-6">
+    <p class="font-black text-2xl mb-6">Popular homes in Budapest > </p>
+
+    <div class="flex flex-row justify-between">
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/026b2b13-e1d2-499d-ada4-795a6f148289.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Kilimani estate</p>
+          <p class="text-xs text-gray-500">$64 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f3788038-3260-4454-a87d-4910b575fa66.jpg.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in Nairobi</p>
+          <p class="text-xs text-gray-500">$50 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/fcb30403-a3e1-4de2-82ad-54d44e9b3974.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Room in Nairobi</p>
+          <p class="text-xs text-gray-500">$120 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Apartment in nailobi</p>
+          <p class="text-xs text-gray-500">$70 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f2b758a1_original.jpg_1.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border   p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Family Home</p>
+          <p class="text-xs text-gray-500">$90 for 2 nights</p>
+        </div>
+      </div>
+
+      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_2.jpeg" alt="">
+        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
+          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
+        </div>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <div class="p-3">
+          <p class="text-sm font-semibold">Penthouse Suite</p>
+          <p class="text-xs text-gray-500">$150 for 2 nights</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
 </main>
