feat: on footer adding icons

--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
 </main>
 
 
-<footer class=" text-black">
+<footer class=" text-black  mt-10">
  
   <div class=" flex justify-center space-x-50">  
     <div> 
@@ -952,15 +952,29 @@
     </div>
 </div>
 
+<div class=" flex  justify-center mx-auto space-x-40 ">
+<div class=" flex space-x-5  mt-10 mb-5">
+    <ul> <a href="" class="  hover:border-b-1"> &copy;2025 Airbnb, Inc. </a></ul>
+    <ul> <a href="" class="  hover:border-b-1">. terms </a></ul>
+    <ul> <a href="" class="  hover:border-b-1">. Sitemap </a></ul>
+    <ul> <a href="" class="  hover:border-b-1">. Privacy </a></ul>
+     <ul> <a href="" class=" hover:border-b-1">. Your Privacy Choices </a></ul>
+     <ul> <img class=" relative top-2  right-5" src="public/photos/lastone.svg" alt=""></ul>
+</div>
 
-<div>
-    <ul> <a href=""> &copf;2025 Airbnb, Inc. </a></ul>
-    <ul> <a href=""> terms </a></ul>
-    <ul> <a href="">  </a></ul>
-    <ul> <a href="">  </a></ul>
+<div class="flex space-x-5 mt-10 mb-5 ">
+    
+          <i class="fa-solid fa-globe relative top-1"></i>
+          <p>English (US)  $ USD</p>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+      
+</div>
 </div>
 </footer>
 
+ 
 
 
 </body>
