--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
-    <link rel="stylesheet" href="/public/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Airbnb clone</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="shortcut icon" href="public/photos/fav.svg" type="image/x-icon">
+  <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
 </head>
-<body class="mx-auto  bg-gray-200">
+<body class="mx-auto bg-gray-200">
 
 <header class="sticky top-0 bg-amber-50 z-10">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="flex  space-x-200 h-16 items-center">
+    <div class="flex justify-between h-16 items-center">
       <div class="flex-shrink-0">
         <a href="#">
           <img class="h-8 w-auto" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_Bélo.svg" alt="Airbnb Logo">
         </a>
       </div> 
 
-      <div class="flex items-center ml-20">
-        <a href="#" class="font-bold">Become a host</a>
+      <div class="flex items-center space-x-4">
+        <a href="#" class="font-bold text-sm sm:text-base">Become a host</a>
         <button class="p-2 rounded-full hover:bg-gray-100 transition">
           <i class="fa-solid fa-globe"></i>
         </button>
-        <div class="flex items-center  p-2 space-x-2 hover:shadow-md cursor-pointer">
+        <div class="flex items-center p-2 space-x-2 hover:shadow-md cursor-pointer">
           <i class="fa-solid fa-bars"></i>
         </div>
       </div>
@@ -39,74 +39,74 @@
   <div class="p-6">
     <p class="font-black text-2xl mb-6">Popular homes in Nairobi > </p>
 
-    <div class="flex flex-row justify-between">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-6">
 
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+      <div class="relative rounded-2xl overflow-hidden shadow-lg">
         <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/026b2b13-e1d2-499d-ada4-795a6f148289.jpg.jpeg" alt="">
         <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
           <p class="text-sm font-medium text-gray-800">Guest favorite</p>
         </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white p-1 bg-transparent"></i>
         <div class="p-3">
           <p class="text-sm font-semibold">Apartment in Kilimani estate</p>
           <p class="text-xs text-gray-500">$64 for 2 nights</p>
         </div>
       </div>
 
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+      <div class="relative rounded-2xl overflow-hidden shadow-lg">
         <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f3788038-3260-4454-a87d-4910b575fa66.jpg.jpeg" alt="">
         <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
           <p class="text-sm font-medium text-gray-800">Guest favorite</p>
         </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white p-1 bg-transparent"></i>
         <div class="p-3">
           <p class="text-sm font-semibold">Apartment in Nairobi</p>
           <p class="text-xs text-gray-500">$50 for 2 nights</p>
         </div>
       </div>
 
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+      <div class="relative rounded-2xl overflow-hidden shadow-lg">
         <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/fcb30403-a3e1-4de2-82ad-54d44e9b3974.jpeg" alt="">
         <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
           <p class="text-sm font-medium text-gray-800">Guest favorite</p>
         </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white p-1 bg-transparent"></i>
         <div class="p-3">
           <p class="text-sm font-semibold">Room in Nairobi</p>
           <p class="text-xs text-gray-500">$120 for 2 nights</p>
         </div>
       </div>
 
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+      <div class="relative rounded-2xl overflow-hidden shadow-lg">
         <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_1.jpeg" alt="">
         <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
           <p class="text-sm font-medium text-gray-800">Guest favorite</p>
         </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white p-1 bg-transparent"></i>
         <div class="p-3">
-          <p class="text-sm font-semibold">Apartment in nailobi</p>
+          <p class="text-sm font-semibold">Apartment in Nairobi</p>
           <p class="text-xs text-gray-500">$70 for 2 nights</p>
         </div>
       </div>
 
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+      <div class="relative rounded-2xl overflow-hidden shadow-lg">
         <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f2b758a1_original.jpg_1.jpeg" alt="">
         <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
           <p class="text-sm font-medium text-gray-800">Guest favorite</p>
         </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border   p-1 bg-transparent"></i>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border p-1 bg-transparent"></i>
         <div class="p-3">
           <p class="text-sm font-semibold">Family Home</p>
           <p class="text-xs text-gray-500">$90 for 2 nights</p>
         </div>
       </div>
 
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
+      <div class="relative rounded-2xl overflow-hidden shadow-lg">
         <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_2.jpeg" alt="">
         <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
           <p class="text-sm font-medium text-gray-800">Guest favorite</p>
         </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
+        <i class="fa-solid fa-heart absolute top-2 right-2 text-white p-1 bg-transparent"></i>
         <div class="p-3">
           <p class="text-sm font-semibold">Penthouse Suite</p>
           <p class="text-xs text-gray-500">$150 for 2 nights</p>
@@ -117,89 +117,6 @@
   </div>
 </div>
 
-
-
-<div>    
-  <div class="p-6">
-    <p class="font-black text-2xl mb-6">Popular homes in Nairobi > </p>
-
-    <div class="flex flex-row justify-between">
-
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
-        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/026b2b13-e1d2-499d-ada4-795a6f148289.jpg.jpeg" alt="">
-        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
-          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
-        </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
-        <div class="p-3">
-          <p class="text-sm font-semibold">Apartment in Kilimani estate</p>
-          <p class="text-xs text-gray-500">$64 for 2 nights</p>
-        </div>
-      </div>
-
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
-        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f3788038-3260-4454-a87d-4910b575fa66.jpg.jpeg" alt="">
-        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
-          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
-        </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
-        <div class="p-3">
-          <p class="text-sm font-semibold">Apartment in Nairobi</p>
-          <p class="text-xs text-gray-500">$50 for 2 nights</p>
-        </div>
-      </div>
-
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
-        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/fcb30403-a3e1-4de2-82ad-54d44e9b3974.jpeg" alt="">
-        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
-          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
-        </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
-        <div class="p-3">
-          <p class="text-sm font-semibold">Room in Nairobi</p>
-          <p class="text-xs text-gray-500">$120 for 2 nights</p>
-        </div>
-      </div>
-
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
-        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_1.jpeg" alt="">
-        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
-          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
-        </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
-        <div class="p-3">
-          <p class="text-sm font-semibold">Apartment in nailobi</p>
-          <p class="text-xs text-gray-500">$70 for 2 nights</p>
-        </div>
-      </div>
-
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
-        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f2b758a1_original.jpg_1.jpeg" alt="">
-        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
-          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
-        </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white border   p-1 bg-transparent"></i>
-        <div class="p-3">
-          <p class="text-sm font-semibold">Family Home</p>
-          <p class="text-xs text-gray-500">$90 for 2 nights</p>
-        </div>
-      </div>
-
-      <div class="relative w-[16%] rounded-2xl overflow-hidden shadow-lg">
-        <img class="h-64 w-full object-cover rounded-2xl" src="public/photos/f040bc97-b336-413a-813d-0927501faf0b.jpg_2.jpeg" alt="">
-        <div class="absolute top-2 left-2 bg-white rounded-lg px-2 py-1">
-          <p class="text-sm font-medium text-gray-800">Guest favorite</p>
-        </div>
-        <i class="fa-solid fa-heart absolute top-2 right-2 text-white  p-1 bg-transparent"></i>
-        <div class="p-3">
-          <p class="text-sm font-semibold">Penthouse Suite</p>
-          <p class="text-xs text-gray-500">$150 for 2 nights</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
 
 
 
