last commit of to day

--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
             <li><a href=""class="  hover:border-b-1">Anti-discrimination</a></li>
             <li><a href="" class="  hover:border-b-1">Disability support</a></li>
             <li><a href=""class="  hover:border-b-1">Cancellation options</a></li>
-            <li><a href=""class="  hover:border-b-1">Report neighborhood concern</a></li>
+            <li><a href=""class="  hover:border-b-1">Report neighborhood concerning</a></li>
         </ul>
     </div>
 
